# cslibs_vectormaps

./: .gitlab-ci.yml  CMakeLists.txt  package.xml
cmake/: cslibs_vectormaps_omp.cmake  omp.cmake  optional_dependencies.cmake
gazebo/launch/: empty.world  empty.xacro  empty_world.launch
include/cslibs_gdal/: dxf_map.h
include/cslibs_vectormaps/: dxf_map.h
include/cslibs_vectormaps/dxf/: dxf_map.h
include/cslibs_vectormaps/loader/: map_loader.hpp
include/cslibs_vectormaps/maps/: grid_vector_map.h  oriented_grid_vector_map.h  oriented_visibility_grid_vector_map.h  rtree_vector_map.h  segment_rtree_vector_map.h  simple_grid_vector_map.h  vector_map.h
include/cslibs_vectormaps/utility/: generic_grid_dynamic.hpp  generic_grid_static.hpp  grid_dimensions.hpp  serialization.hpp  tools.hpp  yaml.hpp
include/utils_gdal/: dxf_map.h
res/: Drawings02.dxf  dxf_to_world_config.yaml  ek.dxf  layered.dxf  mesh_common.dae  rawseeds.dxf  rawseeds_enhanced.dxf  sand1_optimized3.dxf  sand_cleanedup.dxf  test.dxf  vector_map_conversion_exmpl.yaml  walls.dxf
src/: dxf_map.cpp  dxf_map_gazebo.cpp  dxf_map_gazebo.h  dxf_map_renderer.cpp  dxf_map_visualizer.cpp  dxf_to_world.cpp  mesh.cpp  mesh.h  voronoi.cpp  voronoi.h  voronoi.hpp  voronoi.ui
src/dxf/: dxf_map.cpp
src/gazebo/: dxf_map_gazebo.cpp  dxf_to_world.cpp  mesh.cpp  mesh.h
src/map/: dxf_map.cpp
src/map_viewer/: control.cpp  control.h  map.cpp  map.h  map_viewer.cpp  parameters.cpp  parameters.h  renderer.cpp  renderer.h  types.h  view.cpp  view.h
src/map_viewer/algorithms/: corner_detection.h  find_doors.cpp  find_doors.h  find_rooms.cpp  find_rooms.h  rasterization.cpp  rasterization.h  rtree_vectormap_conversion.cpp  rtree_vectormap_conversion.h  types.h  vectormap_conversion.cpp  vectormap_conversion.h  voronoi.hpp
src/map_viewer/models/: corner_layer_model.cpp  corner_layer_model.h  door_layer_model.cpp  door_layer_model.h  layer_model.cpp  layer_model.h  point_layer_model.cpp  point_layer_model.h  polygon_layer_model.cpp  polygon_layer_model.h  room_layer_model.cpp  room_layer_model.h  vector_layer_model.cpp  vector_layer_model.h
src/map_viewer/qt/: QCornerParamDialog.hpp  QDoorParamDialog.hpp  QInteractiveGraphicsView.hpp  QLayerListItem.hpp  QRoomParamDialog.hpp  QRtreeVectormapParamDialog.hpp  QVectormapParamDialog.hpp
src/map_viewer/ui/: map_viewer.ui  map_viewer_corner_param_dialog.ui  map_viewer_door_param_dialog.ui  map_viewer_gridmap_param_dialog.ui  map_viewer_list_item.ui  map_viewer_room_param_dialog.ui  map_viewer_rtree_vectormap_param_dialog.ui  map_viewer_vectormap_param_dialog.ui
src/map_viewer/util/: map_meta_exporter.hpp  rng_color.hpp
src/maps/: grid_vector_map.cpp  oriented_grid_vector_map.cpp  oriented_visibility_grid_vector_map.cpp  rtree_vector_map.cpp  segment_rtree_vector_map.cpp  simple_grid_vector_map.cpp  vector_map.cpp
src/test/: load_map.cpp
src/tools/: dxf_to_occupancy.cpp  map_viewer.cpp  map_viewer.h
src/tools/map_viewer/: QLayerListItem.hpp  control.cpp  control.h  layer_model.cpp  layer_model.h  map.cpp  map.h  map_viewer.cpp  map_viewer.ui  map_viewer_list_item.ui  model.cpp  model.h  parameters.cpp  parameters.h  renderer.cpp  renderer.h  rng_color.hpp  view.cpp  view.h
src/tools/map_viewer/algorithms/: corner_detection.cpp  corner_detection.h  rasterization.cpp  rasterization.h  voronoi.hpp
src/tools/map_viewer/models/: corner_layer_model.cpp  corner_layer_model.h  door_layer_model.cpp  door_layer_model.h  layer_model.cpp  layer_model.h  point_layer_model.cpp  point_layer_model.h  vector_layer_model.cpp  vector_layer_model.h
src/tools/map_viewer/qt/: QCornerParamDialog.hpp  QGridmapParamDialog.hpp  QInteractiveGraphicsView.hpp  QLayerListItem.hpp
src/tools/map_viewer/ui/: map_viewer.ui  map_viewer_corner_param_dialog.ui  map_viewer_list_item.ui
src/tools/map_viewer/util/: bezier_color.hpp  hsv.hpp  map_meta_exporter.hpp  rng_color.hpp
src/vector/: index.hpp  vector_map_grid.cpp  vector_map_grid.h  vector_map_grid_orientation.cpp  vector_map_grid_orientation.h  vector_map_grid_visibility.cpp  vector_map_grid_visibility.h
