<?xml version="1.0"?>
<package>
  <name>cslibs_vectormaps</name>
  <version>0.0.1</version>
  <description>
      Provides an efficient implementation to line segment maps and an simplyfied
      interface for the GDAL library.
  </description>


  <author email="richard.hanten@uni-tuebingen.de">Richard Hanten</author>
  <maintainer email="richard.hanten@uni-tuebingen.de">Richard Hanten</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cslibs_boost_geometry</build_depend>
  <build_depend>cslibs_indexed_storage</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <run_depend>cslibs_boost_geometry</run_depend>
  <run_depend>cslibs_indexed_storage</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>yaml-cpp</run_depend>

  <export>
  </export>
</package>
