<?xml version="1.0"?>
<package format="2">
  <name>cslibs_vectormaps</name>
  <version>0.0.1</version>
  <description>
    The cslibs_vectormaps package contains extensions and a simplified
    interfaces for the gdal library.
    It also provides an efficient representation for vector maps.
  </description>


  <author email="richard.hanten@uni-tuebingen.de">Richard Hanten</author>
  <maintainer email="richard.hanten@uni-tuebingen.de">Richard Hanten</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cslibs_boost_geometry</depend>
  <depend>cslibs_indexed_storage</depend>
  <depend>boost</depend>
  <depend>yaml-cpp</depend>

  <export>
  </export>
</package>
